[gd_scene load_steps=25 format=2]

[ext_resource path="res://data/scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://data/scenes/PlayerSprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://data/scenes/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/scenes/Sword.tscn" type="PackedScene" id=4]
[ext_resource path="res://data/scenes/HealthDisplay.tscn" type="PackedScene" id=5]
[ext_resource path="res://data/scenes/AnimationPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://data/scenes/PlayerSpriteD.tscn" type="PackedScene" id=7]
[ext_resource path="res://data/scenes/AnimationTree.tscn" type="PackedScene" id=8]
[ext_resource path="res://data/animplayer/JumpDOWNNSL.tres" type="Animation" id=9]
[ext_resource path="res://data/animplayer/JumpUPSL.tres" type="Animation" id=10]
[ext_resource path="res://data/audio/Hit.wav" type="AudioStream" id=11]
[ext_resource path="res://data/scenes/Stats.tscn" type="PackedScene" id=12]
[ext_resource path="res://WhiteColor.shader" type="Shader" id=13]
[ext_resource path="res://data/scenes/BlinkTimer.tscn" type="PackedScene" id=14]
[ext_resource path="res://data/animplayer/IdleHighL.tres" type="Animation" id=15]
[ext_resource path="res://data/audio/sword-unsheathe.wav" type="AudioStream" id=16]
[ext_resource path="res://RedColor.shader" type="Shader" id=17]
[ext_resource path="res://data/scenes/BlinkPlayer.tscn" type="PackedScene" id=18]
[ext_resource path="res://data/animplayer/Win.tres" type="Animation" id=19]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 17 )
shader_param/active = false

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 13 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=3]
radius = 11.8828
height = 27.2234

[sub_resource type="CapsuleShape2D" id=4]
radius = 11.6728
height = 26.9132

[sub_resource type="AnimationNodeStateMachinePlayback" id=6]

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 769
script = ExtResource( 1 )

[node name="PlayerSprite" parent="." instance=ExtResource( 2 )]
material = SubResource( 1 )
flip_h = true
frame = 5

[node name="PlayerSpriteD" parent="." instance=ExtResource( 7 )]
visible = false
material = SubResource( 2 )

[node name="Sword" parent="." instance=ExtResource( 4 )]
position = Vector2( -19.5, -6.32 )
collision_mask = 72

[node name="SwordSprite" parent="Sword" index="0"]
flip_h = true

[node name="Hitbox" parent="Sword" index="1"]
position = Vector2( 6.02443, 11.9036 )
collision_layer = 16
collision_mask = 72

[node name="CollisionShape2D" parent="Sword/Hitbox" index="0"]
visible = false
position = Vector2( -6.15339, -11.6757 )
disabled = true

[node name="SwordDetectionBox" parent="Sword" index="2"]
collision_layer = 16
collision_mask = 64

[node name="CollisionShape2D" parent="Sword/SwordDetectionBox" index="0"]
visible = false

[node name="SwordCollision" parent="Sword" index="3"]
visible = false

[node name="SwordPos" parent="Sword" index="4"]
position = Vector2( -15.4022, 0.484626 )

[node name="PlayerHurtBox" parent="." instance=ExtResource( 3 )]
collision_layer = 128

[node name="CollisionShape2D" parent="PlayerHurtBox" index="0"]
visible = false
position = Vector2( 2.31127, 1.91316 )
shape = SubResource( 3 )

[node name="HealthDisplay" parent="." instance=ExtResource( 5 )]
position = Vector2( 20, 20 )

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -2.59695, 1.42513 )
shape = SubResource( 4 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 6 )]
anims/IdleHIGHL = ExtResource( 15 )
anims/JumpDOWNNS = ExtResource( 9 )
anims/JumpUPNS = ExtResource( 10 )
anims/Win = ExtResource( 19 )

[node name="AnimationTree" parent="." instance=ExtResource( 8 )]
parameters/playback = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 12 )]

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -20.0

[node name="SwordsHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -20.0

[node name="BlinkPlayer" parent="." instance=ExtResource( 18 )]

[node name="BlinkTimer" parent="." instance=ExtResource( 14 )]

[node name="CD" type="Timer" parent="."]
one_shot = true
[connection signal="area_entered" from="Sword/SwordDetectionBox" to="." method="_on_SwordDetectionBox_area_entered"]
[connection signal="area_entered" from="PlayerHurtBox" to="." method="_on_PlayerHurtBox_area_entered"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="BlinkTimer" to="." method="_on_BlinkTimer_timeout"]

[editable path="PlayerSprite"]

[editable path="Sword"]

[editable path="Sword/Hitbox"]

[editable path="PlayerHurtBox"]

[editable path="AnimationPlayer"]

[editable path="BlinkTimer"]
